--- a/style.css
+++ b/style.css
@@ -1207,6 +1207,8 @@ footer {
 
 .full-width {
     width: 100%;
+    text-align: center;
+    display: block;
 }
 
 
@@ -1252,6 +1254,9 @@ footer {
     overflow: hidden;
     box-shadow: var(--shadow);
     transition: var(--transition);
+    display: flex;
+    flex-direction: column;
+    height: 100%;
 }
 
 .dog-card:hover {
@@ -1299,6 +1304,9 @@ footer {
 
 .dog-details {
     padding: 25px;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .dog-details h3 {
@@ -1327,6 +1335,7 @@ footer {
     margin-bottom: 25px;
     font-size: 0.95rem;
     color: var(--text-light);
+    flex-grow: 1;
 }
 
 .btn-secondary.disabled {
@@ -1777,7 +1786,7 @@ footer {
 
 .breeding-grid {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 40px;
 }
 
@@ -1790,6 +1799,7 @@ footer {
     border: 1px solid #f0f0f0;
     display: flex;
     flex-direction: column;
+    height: 100%;
 }
 
 .breeding-card:hover {
@@ -1798,19 +1808,18 @@ footer {
 }
 
 .breeding-img {
-    height: 620px;
-    width: 100%;
-    background-color: #eee;
-    background-size: cover;
-    background-position: center;
-    position: relative;
+    height: 350px;
     overflow: hidden;
+    background: #f8f8f8;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .breeding-img img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: center center;
     display: block;
 }
@@ -1833,9 +1842,9 @@ footer {
 
 .breeding-info {
     padding: 30px;
-    flex-grow: 1;
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
 }
 
 .breeding-info h3 {
